[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/Remove.svg" type="Texture" id=1]
[ext_resource path="res://scenes/ui_components/model_item/ModelItem.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/icon_down.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_increase.svg" type="Texture" id=4]
[ext_resource path="res://scenes/ui_components/model_transform/ModelTransform.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=2]
CheckButton/icons/off = ExtResource( 4 )
CheckButton/icons/on = ExtResource( 3 )

[node name="ModelItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1293.0
margin_bottom = 593.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1286.0
margin_bottom = 40.0

[node name="Fold" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Show / hide model properties"
size_flags_vertical = 3
theme = SubResource( 2 )
icon_align = 1

[node name="Model_Name" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 1242.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PLACEHOLDER MODEL NAME"
valign = 1
clip_text = true

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1246.0
margin_right = 1286.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Remove model"
size_flags_vertical = 3
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1286.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="ModelTransform" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1286.0
margin_bottom = 490.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 1286.0
margin_bottom = 514.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 1182.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Material"

[node name="material_override" type="OptionButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1186.0
margin_right = 1286.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 1286.0
margin_bottom = 542.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 1258.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Interactable"

[node name="interactable_switch" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1262.0
margin_right = 1286.0
margin_bottom = 24.0
pressed = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fold" to="." method="fold_item"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="delete_model"]
[connection signal="model_position_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_position"]
[connection signal="model_rotation_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_rotation"]
[connection signal="model_scale_changed" from="VBoxContainer/VBoxContainer/ModelTransform" to="." method="set_model_scale"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/HBoxContainer/material_override" to="." method="set_model_material_override"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/HBoxContainer2/interactable_switch" to="." method="set_model_interactable"]
